Fix spacing cities page

--- a/app/assets/stylesheets/components/_card_city.scss
+++ b/app/assets/stylesheets/components/_card_city.scss
@@ -1,6 +1,5 @@
 .card-city-wrapper {
   display: block;
-  padding: 10px;
   margin-bottom: 16px;
 }
 
