--- a/app/assets/stylesheets/pages/_cities.scss
+++ b/app/assets/stylesheets/pages/_cities.scss
@@ -2,7 +2,6 @@
 
 .cities__headline {
   padding: 0 20px;
-  margin-bottom: 30px;
   font-size: 2rem;
 }
 
